# quant-paper-lab

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-docs  NOTICE  README.md  __init__.py  architecture_revision_v2.md  controller_nn  logging_utils.py  pyproject.toml  quant_pipeline.py  quant_research.py  requirements-e2e.txt  research_control_comparison.csv  research_metrics.csv
irl/: README.md  main.py
mpc/: Module_one.m  Module_one.py  Module_three.m  Module_three.py  Module_two.py
paper/: RESEARCH_STATUS.md  quant_pipeline_research_plan.md
pomcp/: pomcp.py
quant_stack/: __init__.py  alpha.py  checkpointing.py  cli.py  config.py  controllers.py  controllers_extended.py  data.py  evaluation.py  evaluation_helpers.py  execution.py  main.py  pipeline.py  plots.py  result_publisher.py  rl.py  rl_e2e.py
rl_assignment/: deep_q_learning_main.py  deep_q_learning_skeleton.py  q_learning_main.py  q_learning_skeleton.py
scripts/: __init__.py  bootstrap_venv.sh  checkpoint_smoke.py  generate_control_story_plots.py  run_cross_universe.py
stock_trading/: README.md  RESEARCH_STATUS.md  logging_utils.py  neurips_2025.sty  quant_pipeline.py  quant_pipeline_report.aux  quant_pipeline_report.fdb_latexmk  quant_pipeline_report.fls  quant_pipeline_report.out  quant_pipeline_report.tex  quant_pipeline_report_2col.aux  quant_pipeline_report_2col.fdb_latexmk  quant_pipeline_report_2col.tex  quant_pipeline_research_plan.md  quant_research.py  requirements.txt  research_ablation_summary.csv  research_metrics.csv  research_regime_summary.csv  research_robustness_summary.csv  (+5 more)
(+111 files in other folders)
